some bugs have been fixed